MODON MRE BPDEV/force-app/main/default/objects/Mandatory_Document__c/Mandatory_Document__c.object-meta.xml
<CustomObject>
    <label>Mandatory Document</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Mandatory Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandatory Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>