MODON MRE BPDEV/force-app/main/default/objects/Mandatory_Document__c/fields/Process_Flow_Document__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Document__c</fullName>
    <label>Process Flow Document</label>
    <referenceTo>Process_Flow_Document__c</referenceTo>
    <relationshipLabel>Mandatory Documents</relationshipLabel>
    <relationshipName>Mandatory_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>