MODON MRE BPDEV/force-app/main/default/objects/Mandatory_Document__c/fields/Process_Flow_Step__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Process Flow Step</label>
    <referenceTo>Process_Flow_Step__c</referenceTo>
    <relationshipLabel>Mandatory Documents</relationshipLabel>
    <relationshipName>Mandatory_Documents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>